# Actor_Plus

./: .gitmodules  Actor_Plus.inc  Actor_Plus.sln  README.md  pawn.json
Actor_Plus/: Actor_Plus.vcxproj  Actor_Plus.vcxproj.filters  CMakeLists.txt  makefile
Actor_Plus/lib/sdk/amx/: sclinux.h
Actor_Plus/src/: ActorPlus.cpp  ActorPlus.cxx  ActorPlus.h  ActorPlus.hxx  CMakeLists.txt  Callback.h  Native.cpp  Native.cxx  Native.h  Native.hxx  lzn_lib.cpp  lzn_lib.cxx  lzn_lib.h  lzn_lib.hxx  main.cpp  main.cxx  main.def  main.h
Actor_Plus/test/: crashinfo.txt  include.inc  pawn.json  server.cfg  server_log.txt  test.pwn
Actor_Plus/test/gamemodes/: test.amx
Actor_Plus/test/plugins/: Actor_Plus.exp  Actor_Plus.lib
Plugin and Include/: Actor_Plus.inc
dev/: CMakeLists.txt  CMakePresets.json  makefile
dev/src/: ActorPlus.cpp  ActorPlus.h  CMakeLists.txt  Native.h  lzn_lib.h  main.cpp  main.h
dev/test/: Actor_Plus.inc  pawn.json  server.cfg  server_log.txt  test.pwn
dev/test/gamemodes/: test.amx
dev/test/plugins/: Actor_Plus.exp  Actor_Plus.lib
